--- a/src/app/view/announcement/announcement.component.html
+++ b/src/app/view/announcement/announcement.component.html
@@ -22,6 +22,7 @@
       </mat-card-content>
       <mat-card-actions>
         <button mat-button (click)="openAnnouncementDetails(announcement.announcementId)">{{locale().label.edit}}</button>
+        <mat-checkbox (change)="selectAnnouncement(announcement, $event)" [checked]="announcement.checked">{{locale().label.select}}</mat-checkbox>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
@@ -31,7 +32,7 @@
     <button mat-raised-button style="width: 220px;margin-right: 10px" (click)="openAnnouncementDetails(null)">
       {{locale().label.addAnnouncement}}
     </button>
-    <button mat-raised-button style="width: 290px">
+    <button mat-raised-button style="width: 290px" (click)="deleteSelectedAnnouncements()">
       {{locale().label.deleteSelectedAnnouncements}}
     </button>
     <mat-paginator [length]="this.announcementSearchForm.total" aria-label="Select page" #paginator (page)="pageChanged()"
