--- a/src/app/view/contact/contact.component.html
+++ b/src/app/view/contact/contact.component.html
@@ -2,16 +2,18 @@
   <table>
     <thead>
     <tr>
+      <th style="width: 30px"></th>
       <th style="width: 20%">{{locale().label.name}}</th>
       <th style="width: 20%">{{locale().label.contactType}}</th>
       <th style="width: 60%">{{locale().label.value}}</th>
     </tr>
     </thead>
     <tbody *ngFor="let contact of contacts">
-    <tr (click)="openContactDetails(contact)" class="row">
-      <td><strong>{{contact.name}}</strong></td>
-      <td>{{contact.contactType.name}}</td>
-      <td>{{contact.value}}</td>
+    <tr class="row">
+      <td><mat-checkbox (change)="selectContact(contact, $event)" [checked]="contact.checked"></mat-checkbox></td>
+      <td (click)="openContactDetails(contact)" ><strong>{{contact.name}}</strong></td>
+      <td (click)="openContactDetails(contact)" >{{contact.contactType.name}}</td>
+      <td (click)="openContactDetails(contact)" >{{contact.value}}</td>
     </tr>
     </tbody>
   </table>
@@ -20,7 +22,7 @@
   <button mat-raised-button style="margin-right: 20px" (click)="openContactDetails(null)">
     {{locale().label.addContact}}
   </button>
-  <button mat-raised-button>
+  <button mat-raised-button (click)="deleteSelectedContacts()">
     {{locale().label.deleteSelectedContacts}}
   </button>
 </mat-toolbar>
