--- a/src/app/view/product/product.component.html
+++ b/src/app/view/product/product.component.html
@@ -14,6 +14,7 @@
       </mat-card-content>
       <mat-card-actions>
         <button mat-button (click)="openProductDetails(product.productId)">{{locale().label.edit}}</button>
+        <mat-checkbox (change)="selectProduct(product, $event)" [checked]="product.checked">{{locale().label.select}}</mat-checkbox>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
@@ -23,7 +24,7 @@
     <button mat-raised-button style="width: 150px;margin-right: 10px" (click)="openProductDetails(null)">
       {{locale().label.addProduct}}
     </button>
-    <button mat-raised-button style="width: 230px">
+    <button mat-raised-button style="width: 230px" (click)="deleteSelectedProducts()">
       {{locale().label.deleteSelectedProducts}}
     </button>
     <mat-paginator [length]="this.productsSearchForm.total"  aria-label="Select page" #paginator (page)="pageChanged()"
