--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -62,7 +62,7 @@
             <mat-card class="example-card" style="margin: 10px">
               <mat-card-header>
                 <div mat-card-avatar class="example-header-image"
-                     style="background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');"></div>
+                     [style]="'background-image: url(' + (announcement.ownerPhoto == null ? 'assets/nophoto.png' : 'https://drive.google.com/uc?export=view&id=' + announcement.ownerPhoto) + ');'"></div>
                 <mat-card-title>{{announcement.userName}}</mat-card-title>
                 <mat-card-subtitle>Тип</mat-card-subtitle>
               </mat-card-header>
