--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -4,7 +4,10 @@
   </div>
   <br>
 </div>
-<mat-grid-list cols="3" rowHeight="0.93:1">
+<div *ngIf="!isLoading && announcements.length == 0" style="margin-left: 50%;margin-top: 50px">
+  <h2 style="opacity: 0.5">{{locale().label.noResult}}</h2>
+</div>
+<mat-grid-list [cols]="cols" rowHeight="0.93:1" (window:resize)="onResize($event)">
   <mat-grid-tile *ngFor="let announcement of announcements">
     <mat-card class="example-card">
       <mat-card-header>
