--- a/src/app/view/userCard/userCard.details.html
+++ b/src/app/view/userCard/userCard.details.html
@@ -57,6 +57,9 @@
   </mat-radio-group>
 </div>
 <br>
+<div id="dropin-container" click=""></div>
+<button id="submit-button">Request payment method</button>
+<br>
 <mat-form-field appearance="fill">
   <mat-label>{{locale().label.inn}}</mat-label>
   <input matInput type="number" [(ngModel)]="userCard.inn">
