--- a/src/app/view/product/product.component.html
+++ b/src/app/view/product/product.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="products.length == 0" style="margin-left: 50%;margin-top: 50px">
+  <h2 style="opacity: 0.5">{{locale().label.noResult}}</h2>
+</div>
 <mat-grid-list cols="3" rowHeight="0.93:1">
   <mat-grid-tile *ngFor="let product of products">
     <mat-card class="example-card">
