--- a/src/app/view/announcement/announcementDetails/announcementDetails.component.html
+++ b/src/app/view/announcement/announcementDetails/announcementDetails.component.html
@@ -54,7 +54,7 @@
     </mat-select>
   </mat-form-field>
   <br>
-  <button mat-raised-button style="display: inline-block" (click)="openProductDetails(null)">
+  <button mat-raised-button style="display: inline-block;margin-bottom: 5px" (click)="openProductDetails(null)">
     {{locale().label.addProduct}}
   </button>
   <div
