--- a/src/app/view/product/product.component.html
+++ b/src/app/view/product/product.component.html
@@ -24,7 +24,7 @@
 </mat-grid-list>
 <mat-toolbar class="mat-paginator-sticky">
   <mat-toolbar-row>
-    <button mat-raised-button style="width: 150px;margin-right: 10px" (click)="openProductDetails(null)">
+    <button mat-raised-button style="margin-right: 10px" (click)="openProductDetails(null)">
       {{locale().label.addProduct}}
     </button>
     <button mat-raised-button style="width: 230px" (click)="deleteSelectedProducts()">
